--- a/2018-04-04-ED-7-Notes.md
+++ b/2018-04-04-ED-7-Notes.md
@@ -10,7 +10,7 @@
 	- ふわふわした; 綿毛の, 綿毛で覆われた.
 	- 〈食べ物･雲などが〉ふんわりした.
 - **Crinkle** | krɪ́ŋk(ə)l | Verb
-	- [with object]() cause (something) to make a crackling or rustling sound: we tried hard not to crinkle the plastic as we unwrapped the pies.
+	- with object() cause (something) to make a crackling or rustling sound: we tried hard not to crinkle the plastic as we unwrapped the pies.
 	- 〈紙などが〉カサカサと音を立てる.
 - **Faux** | Adjective
 	- made in imitation; artificial: a string of faux pearls | a faux-fur jacket.
