Update and rename 2018-05-21-ED-10 to 2018-05-21-ED-10-notes.md

--- a/2018-05-21-ED-10-notes.md
+++ b/2018-05-21-ED-10-notes.md
@@ -14,7 +14,7 @@
 	- If you do something really bad, you should get a really bad punishment. If you commit a light crime, you should get a light punishment. 
 		- People who kill should be killed. The punishment needs to fit the crime!
 		- He made a small mistake, but was fired. The punishment didn’t fit the crime. 
-- To have a **rich** (**豊か**) life. 
+- To have a **rich(豊か)** life. 
 - We should **exercise** (use) our privileges 
 - 少数精鋭 - **select few**(Translation depends on the situation)
 	- Only an **select few** get to join the team. (Some very skilled people)
